--- a/_c8oProject/mobilePages/Palette.yaml
+++ b/_c8oProject/mobilePages/Palette.yaml
@@ -26,7 +26,12 @@ title: Title for Palette
     beanData: '{"ionBean":"Input","Debounce":"plain:0"}'
     tagName: ion-input
 ↓Content [ngx.components.UIDynamicElement-1589294543659]: 
-  beanData: '{"ionBean":"Content","Padding":"plain:ion-no-padding"}'
+  beanData: |
+    '{
+     "ionBean": "Content",
+     "IonColor": "plain:dark",
+     "Padding": "plain:ion-no-padding"
+    }'
   tagName: ion-content
   ↓Grid [ngx.components.UIDynamicElement-1589294034878]: 
     beanData: '{"ionBean":"Grid"}'
