--- a/ionicTpl/package.json
+++ b/ionicTpl/package.json
@@ -37,6 +37,7 @@
     "golden-layout":"1.5.9"
   },
   "devDependencies": {
+  	"yarn": "1.22.4",
   	"@angularclass/hmr": "~2.1.3",
     "@angular-devkit/build-angular": "~0.901.5",
     "@angular/cli": "~9.1.5",
