--- a/_c8oProject/mobilePages/Layout.yaml
+++ b/_c8oProject/mobilePages/Layout.yaml
@@ -123,7 +123,10 @@ scriptContent:
                     }
                 )
         
-                this.myLayout.init()
+                this.myLayout.init();
+                window.setTimeout(() => {
+        	        this.myLayout.updateSize();
+                }, 500);
         		/*End_c8o_PageConstructor*/
         /*Begin_c8o_PageFunction*/
         	/*End_c8o_PageFunction*/
