--- a/_c8oProject/mobilePages/Projects.yaml
+++ b/_c8oProject/mobilePages/Projects.yaml
@@ -85,6 +85,37 @@ scriptContent:
                     }, 1);
                     return null;
                 });
+        
+        		// Style Treeview scrollBars. As treeview is not in the shadowDom, we can 
+        		// Style it directly...
+        	    setTimeout(() => {
+        			 let content = this.tree.viewportComponent.elementRef.nativeElement
+        			 const styles = document.createElement(''style'');
+        			  
+        			 styles.textContent = `
+        			    ::-webkit-scrollbar {
+        			      width: 5px;
+        			    }
+        			
+        			    /* Track */
+        			    ::-webkit-scrollbar-track {
+        			      box-shadow: inset 0 0 5px grey; 
+        			      border-radius: 5px;
+        			    }
+        			
+        			    /* Handle */
+        			    ::-webkit-scrollbar-thumb {
+        			      background: #2d3436; 
+        			      border-radius: 5px;
+        			    }
+        			
+        			    /* Handle on hover */
+        			    ::-webkit-scrollbar-thumb:hover {
+        			      background: #b30000; 
+        			    }
+        			 `;
+        			 content.appendChild(styles);
+        		}, 250);
         	}
         	
         	refresh(qname) {
